// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en productTitle Debe incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`Pruebas en productTitle Debe mostrar component con titulo personalizado 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product card
  </h1>
</div>
`;
